# FlappyBirdAndroid

./: README.md  error_log.txt
app/: CMakeLists.txt  build.gradle
app/debug/: app-debug.apk
app/release/: FlappyBirdAndroid-release.apk  app-release.apk  output.json
app/src/androidTest/java/com/anative/application/flappybirdandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/audio/: sfx_die.raw  sfx_hit.raw  sfx_point.raw  sfx_swooshing.raw  sfx_wing.raw
app/src/main/assets/config/: config.data
app/src/main/assets/data/: properties.data
app/src/main/assets/shaders/: quad.fs  quad.vs
app/src/main/cpp/include/: animation.h  bird_game_object.h  column_game_object.h  game.h  game_jni.h  game_level.h  game_object.h  gl_renderer_jni.h  globals.h  gui_score.h  handle.h  resource_manager.h  shader.h  sound.h  sound_manager.h  sound_queue.h  sprite.h  sprite_renderer.h  string_literals.h  texture2D.h  utils.h
app/src/main/cpp/src/: animation.cpp  bird_game_object.cpp  column_game_object.cpp  game.cpp  game_jni.cpp  game_level.cpp  game_object.cpp  gl_renderer_jni.cpp  gui_score.cpp  resource_manager.cpp  shader.cpp  sound.cpp  sound_manager.cpp  sound_queue.cpp  sprite.cpp  sprite_renderer.cpp  string_literals.cpp  texture2D.cpp  utils.cpp
app/src/main/java/com/anative/application/flappybirdandroid/: GLRenderer.java  GLView.java  Game.java  MainActivity.java  Timer.java
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/anative/application/flappybirdandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
